# sentry-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.sh  sentry_mcp.py  sentry_reports.py
sentry_mcp/: __init__.py  __main__.py  cli.py
sentry_mcp/core/: reporter.py  server.py
sentry_mcp/utils/: exceptions.py  validators.py
tests/: test_reporter.py  test_server.py  test_validators.py
