[project]
name = "sentry-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Sentry integration"
authors = [
    {name = "Inspectorio Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "httpx>=0.27.0",
]

[project.scripts]
create-mcp-server = "sentry_mcp.cli:create_server"
my-server = "sentry_mcp.cli:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentry_mcp"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

